--- a/Survey/styles/base.css
+++ b/Survey/styles/base.css
@@ -423,15 +423,15 @@ input[type=submit],
 input[type=reset],
 button[class^=a-button] {
   display: block;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   min-width: 3em;
-  min-height: 40px;
+  min-height: 30px;
   -webkit-appearance: none;
   margin: 0 0 12px 0;
   border: 1px solid #455B97;
   border-radius: 10px;
-  padding: 8px 1em;
+  padding: 4px 1em;
   background-color: #455B97;
   color: #FFFFFF;
   white-space: normal;
